# DeepFishy

./: .dockerignore  .gitignore  README.md  alembic.ini  celery_app.py  llms.txt  main.py  mineru.py  pyproject.toml  start.sh  vertexai.py
.agent/rules/: langchain.md
alembic/: env.py
alembic/versions/: 001_add_chat_conversation_and_message_tables.py
api/: deps.py
api/routes/: chat.py  rag.py  response.py  session.py
api/schemas/: chat.py  rag.py  session.py
benchmark/: benchmark_config.yaml  convert_folder_to_pdf.py  evaluate.py  prompt.py  run_dataset_and_evaluate.py
benchmark/dataset/: dataset.csv  dataset_tmp.csv
core/: config.py  constants.py  logging.py
db/: base.py  session.py
db/models/: __init__.py  article.py  conversation.py
deepfishy/: __init__.py
deepfishy/app/: __init__.py
deepfishy/features/: __init__.py
deepfishy/shared/: __init__.py  agents.py  constants.py  logging.py  tracing.py
docker/: .env.example  Dockerfile  docker-compose.yml  init-db.ps1  init-db.sh
embedding/: base_embedding.py  google_embedding.py  openai_embedding.py
engine/: __init__.py  main.py  outline_vnindex.md
engine/graph_rag/: __init__.py  models.py  neo4j_ingestion.py  transformer.py
engine/orchestrators/: __init__.py  builder.py  classifier.py  graph_builder.py  report_writer.py  research.py  synthesizer.py  writer.py
engine/prompts/: builder_orchestrator_prompt.py  graph_builder_prompt.py  orchestrator_prompt.py  refiner_prompt.py  report_writer_prompt.py  research_orchestrator_prompt.py  synthesizer_orchestrator_prompt.py  write_phase_prompt.py  writer_orchestrator_prompt.py
engine/subagents/: _base.md  bear_agent.md  bull_agent.md  chart_generator.md  critique_agent.md  financial_report_writer.md  financial_research.md  gap_analyzer.md  graph_query.md  knowledge_search.md  query_generator.md  researcher.md  section_writer.md  synthesizer_agent.md
engine/tools/: __init__.py  create_financial_chart.py  create_trend_analysis_chart.py  critique_chart.py  execute_chart_code.py  extract_to_graph.py  get_content_by_source_urls.py  get_market_data.py  get_today_market_data.py  list_kg_communities.py  (+7 more)
frontend/: DESIGN_PROMPT.md  package-lock.json  package.json
graph_rag/: __init__.py  chunk_tracker.py  entity_types.py  graphiti_service.py  main.py  transformer.py
ingestion/: embedding_pipeline.py  loader.py
scripts/: convert_benchmark_folder_to_pdf.py  inspect_agent_workspace.py  start.sh
services/: chat.py  embedding_factory.py  embeddings.py  llm_provider.py  milvus.py  minio.py  neo4j.py  rag.py  response.py
src/: main.py
templates/: company_outline.md  industry_outline.md
tests/: test_package_imports.py
utils/: convert_md_to_pdf.py  load_agents.py  load_config.py  model_factory.py  pdf_helpers.py  pdf_layout.py  report_discovery.py  response_parser.py  results_io.py
worker/: celery_config.py
(+212 files in other folders)
