[project]
name = "DeepFishy"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11.12"
dependencies = [
    "alembic>=1.13.0",
    "beautifulsoup4>=4.14.2",
    "celery>=5.6.0",
    "deepagents>=0.2.4",
    "dotenv>=0.9.9",
    "fastapi>=0.123.5",
    "langchain-google-genai>=3.0.0",
    "langchain-openai>=1.0.2",
    "langchain-text-splitters>=1.0.0",
    "langgraph-cli[inmem]>=0.4.7",
    "markdown-pdf>=1.10",
    "matplotlib>=3.9.0",
    "minio>=7.2.0",
    "psycopg2-binary>=2.9.9",
    "pydantic-settings>=2.12.0",
    "pymilvus[milvus-lite]>=2.6.4",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.0",
    "tavily>=1.1.0",
    "uvicorn>=0.27.0",
    "vnstock>=3.3.0",
    "langchain-experimental>=0.4.1",
    "numpy>=2.4.0",
    "langchain-neo4j>=0.7.0",
    "neo4j>=6.1.0",
]
