[project]
name = "DeepFishy"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11.12"
dependencies = [
    "alembic>=1.17.2",
    "celery>=5.6.2",
    "deepagents>=0.3.6",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "langchain-experimental>=0.4.1",
    "langchain-google-genai>=4.2.0",
    "langchain-neo4j>=0.8.0",
    "langchain-openai>=1.1.7",
    "langchain-text-splitters>=1.1.0",
    "langgraph-cli[inmem]>=0.4.11",
    "markdown-pdf>=1.10",
    "matplotlib>=3.10.8",
    "minio>=7.2.20",
    "neo4j>=6.1.0",
    "numpy>=2.4.1",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pymilvus[milvus-lite]>=2.6.6",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
    "tavily>=1.1.0",
    "uvicorn>=0.40.0",
    "vnstock>=3.3.1",
]
